--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
 	  "request": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "^1.6.0",
+    "eslint": "^2.9.0",
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.10.1",
-    "grunt-eslint": "^17.2.0",
-    "less": "2"
+    "grunt-eslint": "^19.0.0",
+    "less": "2",
+	"open": "~0.0.4"
   }
 }
